<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">

    <include
        layout="@layout/appbar"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="210dp"
        android:layout_height="21dp"
        android:layout_marginTop="47dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/myToolbar" />

    <EditText
        android:id="@+id/editTextText"
        android:hint="@string/nombre_hint"
        android:autofillHints="name"
        android:layout_width="210dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:ems="10"
        android:inputType="text"
        />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="210dp"
        android:layout_height="21dp"
        android:text="@string/asunto"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/subject"
        android:hint="@string/asunto_hint"
        android:layout_width="210dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:ems="10"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="210dp"
        android:layout_height="21dp"
        app:layout_constraintTop_toBottomOf="@id/subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/descripcion"
        tools:layout_editor_absoluteY="408dp" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:hint="@string/descripcion_hint"
        android:autofillHints=""
        android:layout_width="210dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteY="441dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/sendButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        app:layout_constraintVertical_bias="0.952" />

</androidx.constraintlayout.widget.ConstraintLayout>